finished category controller
