# src/routes/category.route.ts
@@ -1,8 +1,8 @@
 import express, { Request, Response } from "express";
 import CategoriesController from "../controllers/category.controller";
 import { DataResponse } from "../interfaces/DataResponse";
-import CategoryService from "../services/CategoryService";
-import handleResponse from "../utils/response";
+import CategoryService from "../services/category.service";
+import { handleResponse } from "../helpers/handleResponse";
 import { container } from "../containerDI";
 import Types from "../types";
 const router = express.Router();
@@ -13,20 +13,22 @@ const categoryController = new CategoriesController(categoryService);
 router.get("/", async (req: Request, res: Response) => {
   const response: DataResponse = await categoryController.getCategories();
 
-  return res.status(response.statusCode).json({
-    success: true,
-    payload: response.data,
-  });
+  return handleResponse(res, response);
 });
 router.get("/:id", async (req: Request, res: Response) => {
   const response: DataResponse = await categoryController.getCategory(
     req.params.id
   );
 
-  return res.status(response.statusCode).json({
-    success: true,
-    payload: response.data,
-  });
+  return handleResponse(res, response);
+});
+
+router.post("/", async (req: Request, res: Response) => {
+  const response: DataResponse = await categoryController.createCategory(
+    req.body
+  );
+
+  return handleResponse(res, response);
 });
 
 export default router;
